--- a/03-Method_Measures.Rmd
+++ b/03-Method_Measures.Rmd
@@ -4,7 +4,9 @@
 
 Measures of parent occupation were obtained for both mother and partner during child gestation. Parental occupations were then classified as unskilled(0), partly skilled (1), skilled manual (2), skilled non-manual (3), manegerial and technical (4), or professional (5). Of reported parent occupations, the highest reported occupation was used as a proxy for parent SES, to be treated as a continuous (0-5) covariate in analyses.
 
-### Body Mass Index Z-score (BMI-Z) at Age 10
+### Body Mass Index
+
+Objective body mass index (BMI) was collected at face-to-face assessment (median ages: xx, 13.8, 15.5, 17.8, and 24.0) and self- or parent-report (median ages xx, xxx, xx, xx, xx. ). To maximize accuracy and minimize missing data, data from objective and self-report were integrated at ages 10, 14, 16, and 18 reflecting BMI assessments in the prior year, such that objective BMIz was used, if available, and self- or parent-report BMIz was used if objective data was not available (see Table \@ref(tab:x) for available data across timepoints). BMIz at age 10 was used as an analytic covariate and BMI/BMIz at later ages was used as a diagnostic criteria for AN (see more information in Table \@ref(tab:y) below). At ages 14-18, an underweight assignment was determined using age and gender BMIz score of \< -2 using World Health Organization (WHO) reference data and corresponding to grade 1 thinness [@coleBodyMassIndex2007]; at Age 24 underweight was assigned as BMI \< 18.5.
 
 ```{r bmi, include = FALSE}
 # clinic <- sum(!is.na(demo_ed.f$bmi_clinic.13))
@@ -18,8 +20,6 @@ Measures of parent occupation were obtained for both mother and partner during c
 # pr_percent <- round((best_avail-clinic)/7688*100, 2)
 
 ```
-
-Child BMI-Z was assessed via two indices at age 13 years. First, objective height and weight were obtained for those who completed a clinic visit at age 13 (median age at clinic visit = 13.8 years). Second, parents reported child height and weight via questionnaire (median age = 13.1). An age and sex adjusted BMI-Z score was obtained from these self-report and clinic-recorded measurments. In order to maximize accuracy, when clinic-obtained measurements were obtained, this BMI-Z score was used (n = r clinic; clinic_percent %. BMI-Z from parent report was used when clinic measurement was not available (n = pr_n; pr_percent%). A portion of the sample had neither measurement available (n = missing_n\`; missing_percent%)
 
 ### Exercise Measures
 
@@ -35,10 +35,11 @@ At age 24, participants were asked the frequency with which they exercised to lo
 
 Issues that are associated with exercise were also reported at ages 14,16, 18, and 24 years. At all assessment points, participants reported whether exercise interferes with work/school (14,16,18), or their daily routine (24). At ages 14 and 24, participants also reported whether they exercised to lose weight even when sick or injured. At ages 16 and 18 years, participants reported whether they felt guilty about missing an exercise session -- see Table \@ref(tab:tab2) . Responses options for exercise issues were 'No', 'yes - Sometimes', or 'Yes - Frequently'.
 
-```{r tab2}
-# x <- tibble(age = c(14,16,18,24), Interferes = c('x','x','x','x'), Sick_Injured = c('x',' ',' ', 'x'), Guilt = c('' ,'x','x', '')) 
-# 
-# knitr::kable(x, caption = 'Exercise Issues Assessed at Each Age')
+```{r tab2, echo = FALSE}
+library(tibble)
+x <- tibble(age = c(14,16,18,24), Interferes = c('x','x','x','x'), `Sick or Injured` = c('x',' ',' ', 'x'), Guilt = c('' ,'x','x', '')) 
+
+knitr::kable(x, caption = 'Exercise Issues Assessed at Each Age')
 ```
 
 Exercise issues are deemmed to be 'present' at each time point if an individual endorses: (1) exercise interfering with work/school sometimes or more OR frequent guilt when missing an exercise session at ages 16 and 18 years and (2) exercise interfering with work/school/daily routine sometimes or more OR exercising even when sick/injured sometimes or more at ages 14 and 24 years.
@@ -88,35 +89,14 @@ Moderate to Vigerous Physical Activity (MVPA) measures the average amount of tim
 
 #### Valid Days
 
-Valid Days are calculated using a cutoff of minutes per day that an accelerometer was worn. For ages 11.5-15.5 a cutoff of \>=600 minutes per day was used. At age 24 Valid Days were operationalised as a wear time of at least 500 minutes, after excluding intervals of \>60 minutes with zero counts. \#### Sedentary Behavior
+Valid Days are calculated using a cutoff of minutes per day that an accelerometer was worn. For ages 11.5-15.5 a cutoff of \>=600 minutes per day was used. At age 24 Valid Days were operationalised as a wear time of at least 500 minutes, after excluding intervals of \>60 minutes with zero counts.
 
 ### Eating Disorder Diagnoses
 
-Eating disorder diagnoses (AN, BN,BED, purging disorder [PD], and Other Specified Feeding and Eating Disorder (OSFED)) for adolescents were derived using questionnaire data from the Youth Risk Behavior Surveillance System questionnaire (YRBSS) using DSM-5 diagnostic criteria (excluding OSFED) [@micaliAdolescentEatingDisorders2015][@americanpsychiatricassociationDiagnosticStatisticalManual2013]. AN was assessed using both the YRBSS self-report and parental report since adolescents tend to under-report AN symptoms [@houseDiagnosingEatingDisorders2008]. Table X shows the criteria used for each diagnosis [@micaliAdolescentEatingDisorders2015].
+Eating disorder diagnoses (AN, BN,BED, BN-Spectrum [Purging disorder and subclinical BN], BED-spectrum [subclinical BED], and Restrictive spectrum [ED cognitions and restrictive ED behaviors in the absence of regular binge eating, purging, or low weight]) were derived at each age using best available measures and following steps outlined in @micaliAdolescentEatingDisorders2015, with minor changes (low-weight was defined as BMIZ \< -1.0 at ages 14 and 16 years; additional cognitive measures added to criteria as available; subclinical and OSFED categories collapsed to reflect BN, BED, and Restrictive Spectrum ED pathology). Scoring algorithms reflect DSM-5 criteria aligned as well as possible with available data that can be harmonized across assessment points [@americanpsychiatricassociationDiagnosticStatisticalManual2013]. While the majority of ED cognitions and behaviors are self-reported, parent-report of restrictive eating was included as an indicator at ages 14 and 16 years as adolescents tend to under-report AN symptoms [@houseDiagnosingEatingDisorders2008]. Table X shows the full criteria used for each diagnosis.
 
-Diagnoses were assessed at Waves14+, 16+, 18+, and 24+. Body mass index (BMI), which is an objective measure, was also collected at face to face assessment (median ages: 13.8, 15.5, 17.8, and 24.0) and used as a diagnostic criteria for AN. Furthermore, an underweight assignment wasdetermined using age, gender, and BMI-specific cutoffs (based on UK reference data); corresponding to World Health Organization (WHO) grade 1 thinness [@coleBodyMassIndex2007]. Excessive exercise, which is used as criteria for an AN and OSFED diagnoses, was assigned to the adolescent if they found themselves lacking time to do schoolwork due to engaging in exercise, exercising when sick or injured, and feeling guilt when unable to exercise.
+Diagnoses were assessed at Waves14+, 16+, 18+, and 24+. Excessive exercise, which is used as criteria for an AN and OSFED diagnoses, was assigned to the adolescent if they found themselves lacking time to do schoolwork due to engaging in exercise, exercising when sick or injured, and feeling guilt when unable to exercise.
 
-| **Table X. Diagnostic Criteria**                                    |                                                                                                                                                                                                              |                                                                                                                                                                                                              |                                                                                                                                                                                                              |                                                                                    |
-|------------|------------|------------|------------|------------|
-| **Diagnoses**                                                       | **Wave 14+**                                                                                                                                                                                                 | **Wave 16+**                                                                                                                                                                                                 | **Wave 18+**                                                                                                                                                                                                 | **Wave 24+**                                                                       |
-| Anorexia Nervosa (AN)                                               | Self-report or objective measured underweight (BMIz \< -1)                                                                                                                                                   | Self-report or objective measured underweight (BMIz \< -1)                                                                                                                                                   | BMI \< 18.5 at age 17.5 (check?)                                                                                                                                                                             | BMI \< 18.5                                                                        |
-|                                                                     | AND 2. self-reported weight and shape concern OR Maladaptive Exercise                                                                                                                                        | AND 2. engaged in fasting for weight loss or to avoid weight gain at least monthly OR maladaptive exercise                                                                                                   | AND Fasting for weight loss or to avoid weight gain at least monthly OR maldaptive exercise                                                                                                                  | AND 2. engaged in fasting for weight loss or to avoid weight gain at least monthly |
-|                                                                     | OR engaged in fasting for weight loss or to avoid weight gain at least monthly                                                                                                                               | OR engaged in excessive exercise                                                                                                                                                                             |                                                                                                                                                                                                              | OR engaged in excessive exercise                                                   |
-|                                                                     | OR engaged in excessive exercise                                                                                                                                                                             |                                                                                                                                                                                                              |                                                                                                                                                                                                              |                                                                                    |
-|                                                                     | 1\. Underweight (BMI\<18.5)                                                                                                                                                                                  | 1\. Underweight (BMI\<18.5)                                                                                                                                                                                  |                                                                                                                                                                                                              |                                                                                    |
-|                                                                     | AND 2. Presence of fear of weight gain AND fat avoidance in the 3 months prior to assessment                                                                                                                 | 2\. Presence of fear of weight gain AND fat avoidance in the 3 months prior to assessment                                                                                                                    |                                                                                                                                                                                                              |                                                                                    |
-| Bulimia Nervosa (BN)                                                | 1.Weekly binge eating                                                                                                                                                                                        | 1.Weekly binge eating                                                                                                                                                                                        | 1.Weekly binge eating                                                                                                                                                                                        | 1.Weekly binge eating                                                              |
-|                                                                     | AND 2. weekly purging                                                                                                                                                                                        | AND 2. weekly purging                                                                                                                                                                                        | AND 2. weekly purging                                                                                                                                                                                        | AND 2. weekly purging                                                              |
-| Binge Eating Disorder (BED)                                         | 1\. Weekly binge eating                                                                                                                                                                                      | 1.Weekly binge eating                                                                                                                                                                                        | 1.Weekly binge eating                                                                                                                                                                                        | 1\. Weekly binge eating                                                            |
-|                                                                     | AND 2. At least 3 cognitive symptoms (eating fast or faster than normal; eating until stomach hurt or they felt sick, eating large amounts when not hungry, eating alone, feeling guilty about amount eaten) | AND 2. At least 3 cognitive symptoms (eating fast or faster than normal; eating until stomach hurt or they felt sick, eating large amounts when not hungry, eating alone, feeling guilty about amount eaten) | AND 2. At least 3 cognitive symptoms (eating fast or faster than normal; eating until stomach hurt or they felt sick, eating large amounts when not hungry, eating alone, feeling guilty about amount eaten) | AND 2. Absence of purging                                                          |
-|                                                                     | AND 3. Absence of purging                                                                                                                                                                                    | AND 3. Absence of purging                                                                                                                                                                                    | AND 3. Absence of purging                                                                                                                                                                                    |                                                                                    |
-| Purging Disorder                                                    | 1\. Purging at least weekly                                                                                                                                                                                  | 1\. Purging at least weekly                                                                                                                                                                                  | 1\. Purging at least weekly                                                                                                                                                                                  | 1\. Purging at least weekly                                                        |
-|                                                                     | 1\. AND 2. Binge eating absent or \< monthly                                                                                                                                                                 | AND 2. Binge eating absent or \< monthly                                                                                                                                                                     | AND 2. Binge eating absent or \< monthly                                                                                                                                                                     | AND 2. Binge eating absent or \< monthly                                           |
-| Sub-threshold BN (Sub-BN)                                           | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                           |
-|                                                                     | AND 2. monthly purging                                                                                                                                                                                       | AND 2. monthly purging                                                                                                                                                                                       | AND 2. monthly purging                                                                                                                                                                                       | AND 2. monthly purging                                                             |
-| Sub-threshold BED (Sub-BED)                                         | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                           |
-|                                                                     | AND 2. At least 3 cognitive symptoms                                                                                                                                                                         | AND 2. At least 3 cognitive symptoms                                                                                                                                                                         | AND 2. At least 3 cognitive symptoms                                                                                                                                                                         | AND 2. Absence of purging                                                          |
-|                                                                     | AND 3. Absence of purging                                                                                                                                                                                    | AND 3. Absence of purging                                                                                                                                                                                    | AND 3. Absence of purging                                                                                                                                                                                    |                                                                                    |
-| Other Specified Feeding and Eating Disorder-other 1 (OSFED-other 1) | monthly binge eating, purging, excessive exercising or fasting                                                                                                                                               | monthly binge eating, purging, excessive exercising or fasting                                                                                                                                               | monthly binge eating, purging, excessive exercising or fasting                                                                                                                                               | monthly binge eating, purging, excessive exercising or fasting                     |
-| Other Specified Feeding and Eating Disorder-other 2 (OSFED-other 2) | \< monthly binge eating, purging, excessive exercise or fasting                                                                                                                                              | \< monthly binge eating, purging, excessive exercise or fasting                                                                                                                                              | \< monthly binge eating, purging, excessive exercise or fasting                                                                                                                                              | \< monthly binge eating, purging, excessive exercise or fasting                    |
-|                                                                     | AND weight and shape concern                                                                                                                                                                                 |                                                                                                                                                                                                              |                                                                                                                                                                                                              |                                                                                    |
+```{r alspac_dx_table, fig.cap= 'Diagnostic Criteria Assessed Across Age'}
+knitr::include_graphics('figs/ALSPAC_Dx_Table.png')
+```
